--- a/pokoje/templates/pokoje/base.html
+++ b/pokoje/templates/pokoje/base.html
@@ -9,10 +9,18 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     {% include 'pokoje/navbar.html' %}
-    {% block content %}
-
-
-	{% endblock %}
+    <div id="contnet", name="content", class="main">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <h1 class="mt-2">Heartapp</h1>
+                <hr class="mt-0 mb-4">
+                    {% block content %}
+                
+                    {% endblock %}
+          
+            </div>
+        </div>
+    </div>
   </body>
 </html>
 
