--- a/pokoje/templates/pokoje/navbar.html
+++ b/pokoje/templates/pokoje/navbar.html
@@ -19,10 +19,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="{% url 'admin' %}">Admin</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">Login</a>
+          <a class="nav-link" href="{% url 'register' %}">Stwórz użytkownika</a>
 	  
       </ul>
     </div>
