--- a/pokoje/templates/pokoje/base.html
+++ b/pokoje/templates/pokoje/base.html
@@ -6,18 +6,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
-    
+    {% load crispy_forms_tags %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     {% include 'pokoje/navbar.html' %}
     <div id="contnet", name="content", class="main">
         <div class="row justify-content-center">
             <div class="col-8">
-                <h1 class="mt-2">Heartapp</h1>
+
                 <hr class="mt-0 mb-4">
-                    {% block content %}
+
+                        {% block content %}
                 
-                    {% endblock %}
-          
+                        {% endblock %}
+
+         
             </div>
         </div>
     </div>
