--- a/pokoje/templates/pokoje/navbar.html
+++ b/pokoje/templates/pokoje/navbar.html
@@ -24,8 +24,22 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'register' %}">Stwórz użytkownika</a>
-	  
-      </ul>
+        </li>
+    </div>
+    <div>
+      <ul class="navbar-nav ms-auto">
+        {% if user.is_authenticated %}
+        <span class="navbar-text"> {{user.username|title}} </span>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Wyloguj się</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Zaloguj się</a>
+          </li>
+        {% endif %}
+        </ul>
+    </div>
     </div>
   </div>
 </nav>
